Async load threejs

--- a/waka.html
+++ b/waka.html
@@ -11,6 +11,7 @@
 	<style type="text/css">
             html,body{width:1920px;overflow:auto;height:1080px;margin:0px;border:0px;padding:0px;background-color:rgba(0,0,0,0);}
         </style>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
         <script type="text/javascript">
             // ok
             console.log("okaq waka nano go!");
@@ -63,6 +64,7 @@ var g = {
 	"load2": function() {
 		console.log("shall we play a game?");
 		
+		console.log(THREE);
 	}
 }
 // scene
