--- a/waka.html
+++ b/waka.html
@@ -274,12 +274,25 @@ var tea = {
 	},
 	"plane4": function() {
 		tea.b.remove(tea.j.c);
-		tea.c.position.set(0,0,8);
+		tea.c.position.set(0,0,16);
 
-		tea.d.render)tea.b,tea.c);
+		tea.d.render(tea.b,tea.c);
 	},
 	"cube3": function() {
 		tea.k = {};
+		tea.k.a = new THREE.BoxGeometry(8,8,8);
+		tea.k.b = new THREE.MeshPhongMaterial();
+		tea.k.b.color = new THREE.Color(Math.random(),Math.random(),Math.random());
+		tea.k.c = new THREE.Mesh(tea.k.a,tea.k.b);
+		tea.k.d = new THREE.Euler(Math.random()*Math.PI,Math.random()*Math.PI,Math.random()* Math.PI);
+		// tea.k.d = new THREE.Euler(0.1,0,0);
+		tea.k.c.setRotationFromEuler(tea.k.d);
+		console.log(tea.k.c.rotation);
+		
+		tea.b.add(new THREE.AmbientLight(0xFFFFFF,1));
+		tea.b.add(tea.k.c);
+
+		tea.d.render(tea.b,tea.c);
 	}
 }
    // dom
