--- a/waka.html
+++ b/waka.html
@@ -326,12 +326,34 @@ var tea = {
 	},
 	"nook2": function() {
 		tea.l = {};
-		tea.l.a = new BoxGeometry(1,16,1);
+		tea.l.a = new THREE.BoxGeometry(16,16,16);
 		tea.l.b = new THREE.MeshPhongMaterial();
 		tea.l.b.color = new THREE.Color(Math.random(),Math.random(),Math.random());
 		tea.l.c = new THREE.Mesh(tea.l.a,tea.l.b);
-		tea.l.d = new Euler(0,0,0);
+		tea.l.d = new THREE.Euler(0,0,0);
 		// set from rotation
+
+		// lights
+		tea.l.e = [];
+		tea.l.e[0] = new THREE.DirectionalLight(0xFFFFFF,1);
+		tea.l.e[0].position.set(0,0,160);
+		tea.l.e[0].target.position.set(0,0,0);
+		tea.l.e[1] = new THREE.DirectionalLight(0xFFFFFF,1);
+		tea.l.e[1].position.set(0,0,-160);
+		tea.l.e[1].target.position.set(0,0,0);
+
+		// scene
+		tea.b.add(tea.l.c);
+		tea.b.add(tea.l.e[0]);
+		tea.b.add(tea.l.e[1]);
+		tea.b.add(tea.l.e[0].target);
+		tea.b.add(tea.l.e[1].target);
+
+		// sub-routine for each tower
+		
+		tea.c.position.set(0,0,32);
+		tea.d.render(tea.b,tea.c);
+
 	}
 }
    // dom
