--- a/waka.html
+++ b/waka.html
@@ -136,6 +136,21 @@ var g = {
 
 		// add tower
 		tea.nook2();
+
+		// loop, update random translation, render	
+		g.tick = 0;
+		g.mat = 32;
+		g.id = window.setInterval(g.frame2, 1000);
+	},
+	"frame2": function() {
+		if (g.tick >= g.mat) {
+			console.log("anim done");
+			window.clearInterval(g.id);
+			return;
+		}
+		// update & render
+		tea.nook3();
+		g.tick = g.tick + 1;
 	}
 }
 // scene
@@ -326,7 +341,7 @@ var tea = {
 	},
 	"nook2": function() {
 		tea.l = {};
-		tea.l.a = new THREE.BoxGeometry(16,16,16);
+		tea.l.a = new THREE.BoxGeometry(1,16,1);
 		tea.l.b = new THREE.MeshPhongMaterial();
 		tea.l.b.color = new THREE.Color(Math.random(),Math.random(),Math.random());
 		tea.l.c = new THREE.Mesh(tea.l.a,tea.l.b);
@@ -351,7 +366,7 @@ var tea = {
 
 		// sub-routine for each tower
 		
-		tea.c.position.set(0,0,32);
+		tea.c.position.set(0,16,32);
 		tea.d.render(tea.b,tea.c);
 
 	}
