1-D random walk tower

--- a/waka.html
+++ b/waka.html
@@ -369,6 +369,14 @@ var tea = {
 		tea.c.position.set(0,16,32);
 		tea.d.render(tea.b,tea.c);
 
+	},
+	"nook3": function() {
+		let a0 = (Math.random() * 32) >>> 0;
+		a0 = Math.random() >= 0.5 ? a0 : -a0;
+		// console.log(a0);
+		tea.l.c.position.set(a0,0,0);
+
+		tea.d.render(tea.b,tea.c);
 	}
 }
    // dom
