--- a/raka.html
+++ b/raka.html
@@ -78,6 +78,16 @@ var g = {
 
 
 	}
+},
+// word
+var msg = {
+	"init": function() {
+		msg.a = {};
+
+		// each glyph is a quad plane square 32 by 32
+		// the texture is a procedurally generated digital image
+		// bitmap taken from gugi font data
+	}
 }
    // dom
    var dom = {
