--- a/raka.html
+++ b/raka.html
@@ -66,6 +66,8 @@ var g = {
 		
 		console.log(THREE);
 
+		window.setTimeout(g.load3, 1000);
+
 		// waka nano game intro
 
 		// create field of play - solid plane
@@ -76,17 +78,83 @@ var g = {
 		// through the geometry back to front
 		// reveal occlusion surfaces along the movement
 
+	},
+	"load3": function() {
+		console.log("convert msg to image");
 
+		msg.init();
+		msg.conv();
 	}
-},
+}
 // word
 var msg = {
 	"init": function() {
+		// state
 		msg.a = {};
+
+		// data
+		msg.b = [];
+		msg.b[0] = "yum";
 
 		// each glyph is a quad plane square 32 by 32
 		// the texture is a procedurally generated digital image
 		// bitmap taken from gugi font data
+	},
+	"conv": function() {
+		// glyph canvas to image
+		msg.c = {};
+		msg.c.a = [];
+		for (let i = 0; i < msg.b[0].length; i++) {
+			let a0 = msg.b[0][i];
+			let a1 = a0.toUpperCase();
+			console.log(msg.b[0],a0,a1);
+		}
+	}
+}
+// scene
+var sce = {
+	"init": function() {
+		// bkgd
+		sce.a = {};
+		sce.a.r = [1920,1080,0,0];
+		sce.a.c = dom.canvas(sce.a.r);
+		dom.add(sce.a.c);
+		sce.a.c.can.dataset.x = "bkgd";
+		sce.a.c.can.addEventListener("click", sce.click, false);
+		// pane
+		sce.b = {};
+		sce.b.r = [1024,1024,448,28];
+		sce.b.c = dom.canvas(sce.b.r);
+		dom.add(sce.b.c);
+		sce.b.c.can.dataset.x = "pane";
+		sce.b.c.can.addEventListener("click", sce.click, false);
+		// txt
+		sce.c = {};
+	},
+	"click": function(e) {
+		console.log(e);
+		console.log(e.target.dataset.x);
+		// swtich
+	},
+	"deep": function() {
+		dom.remove(sce.a.c);
+		dom.remove(sce.b.c);
+	}
+}
+// xhr
+var net = {
+	"init": function() {
+		net.a = {};
+	}
+}
+// render
+var ren = {
+	"clear": function() {
+		sce.a.c.con.fillStyle = rgba.rand();
+		sce.a.c.con.fillRect(0,0,sce.a.c.can.width,sce.a.c.can.height);
+
+		sce.b.c.con.fillStyle = rgba.css([0,0,0,1.0]);
+		sce.b.c.con.fillRect(0,0,sce.b.c.can.width,sce.b.c.can.height);
 	}
 }
    // dom
